[package]
name = "exploring_rust_std_lib"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

# This doesn't work here. Put the ENV configuration in $PROJECT_HOME/.config/config.toml
# [env]
# TMPDIR = { value = "/home/tmp", force = true }
# OPENSSL_DIR = { value = "vendor/openssl", relative = true }


[dependencies]
thiserror = "1.0.29"
anyhow = "1.0.44"